--- a/.github/workflows/apiCall.yml
+++ b/.github/workflows/apiCall.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Label issues
         uses: andymckay/labeler@e6c4322d0397f3240f0e7e30a33b5c5df2d39e90
         with:
-          add-labels: "Buildable"
+          add-labels: "Approved"
